# FandoraEngine3D

./: .gitignore  CMakeCache.txt  CMakeLists.txt  imgui.ini
src/: main.cpp
src/assets/gameObject/: Sphere.mtl  Terrain.mtl  desert.mtl
src/engine/: Application.cpp  Application.h  Camera.cpp  Camera.h  Color.h  Command.cpp  Command.h  ECS.h  Engine.cpp  Engine.h  FrameBuffer.cpp  FrameBuffer.h  GameObject.cpp  GameObject.h  Global.cpp  Global.h  Light.cpp  Light.h  Log.h  Material.h  Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h  Object.cpp  Object.h  Resources.cpp  Resources.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Time.cpp  Time.h
src/engine/component/: MeshRender.cpp  MeshRender.h  SunComponent.h  Transform.h
src/engine/core/exception/: Exception.h
src/engine/core/gr/: gh.h
src/engine/core/scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/engine/core/wavefront/: Object.h  Wavefront.cpp  Wavefront.h
src/engine/math/: Matrix4x4.cpp  Matrix4x4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h
src/engine/shader/: ShaderMain.frag  ShaderMain.vert
src/engine/ui/: ImGuiRender.cpp  ImGuiRender.h
src/engine/ui/main/: Template.cpp  Template.h  View.h
src/window/: Game.cpp  Game.h  Window.cpp  Window.h
